--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -3534,7 +3534,7 @@ a {
   .main {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 748px 120px auto 150px auto 142px auto 100px auto 100px auto;
+    grid-template-rows: 748px 120px auto 150px auto 142px auto 100px auto 100px auto 100px auto 100px auto;
     // grid-template-rows: minmax(748px, auto) 20px auto auto auto auto auto;
     // gap: 100px;
 
@@ -3856,14 +3856,19 @@ a {
     .regions {
       grid-row: 7 / 8;
       .regions__container {
+        max-width: 100%;
         display: grid;
         grid-auto-flow: row;
         gap: 43px;
         .regions__title {
+          max-width: 1712px;
+          width: 100%;
+          text-align: left;
+          margin: 0 auto;
         }
   
         .regions__list {
-          width: calc(100vw - 104px);
+          width: 100vw;
           // overflow: auto;
           // display: grid;
           // grid-auto-flow: column;
@@ -4030,6 +4035,117 @@ a {
       }
 
     }
+
+    .slider {
+      grid-row: 9/10;
+      .slider__container {
+        display: grid;
+        grid-template: 25px 820px / 100%;
+        // grid-template: 25px 820px / 1fr; // так не работает!!!!!!!!!!!!
+
+        gap: 20px;
+        .slider__title {
+        font-family: Inter;
+        font-size: 18px;
+        font-weight: 400;
+        text-align: left;
+        color: #303030;
+        letter-spacing: -1px;
+
+        }
+        .slider__list {
+
+          .slider__item {
+            display: block;
+            border-radius: 10px;
+            width: 100%;
+            height: 100%;
+            
+            & img {
+              aspect-ratio: 1712/820;
+              width: 100%;
+            height: 100%;
+            object-fit: cover;
+            object-position: center;
+            }
+
+            &_1 {
+            }
+            &_2 {
+            }
+            &_3 {
+            }
+            &_4 {
+            }
+          }
+        }
+        .owl-nav {
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+          width: 94%;
+          display: grid;
+          grid-auto-flow: column;
+          justify-content: space-between;
+          gap: 20px;
+          align-items: center;
+
+          @media (max-width: 1280px) {
+            display: none;
+          }
+
+          .owl-prev {
+            background: url("@img/owl-index-prew-btn_white.svg") !important;
+            width: 55px;
+            height: 55px;
+            background-size: cover !important;
+            background-repeat: no-repeat !important;
+            background-position: center !important;
+            cursor: pointer;
+
+            & span {
+              display: none;
+            }
+          }
+
+          .owl-next {
+            // position: absolute;
+            // top: 0;
+            // right: 0;
+            background: url("@img/owl-index-next-btn_white.svg") !important;
+            width: 55px;
+            height: 55px;
+
+            background-size: cover !important;
+            background-repeat: no-repeat !important;
+            background-position: center !important;
+            cursor: pointer;
+
+            & span {
+              display: none;
+              /* display: block; */
+              /* background-image: url("../img/owl_next.svg");
+              width: 50px;
+              height: 50px;
+              background-size: cover;
+              cursor: pointer; */
+            }
+          }
+        }
+      }
+    }
+
+    .plans {
+      grid-row: 11/12;
+      background: #F5F5F5;
+
+      .plans__container {
+
+      }
+    }
+
+
   }
 
   // --------------- slider start ---------------
