--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -310,6 +310,39 @@ a {
     }
   }
 
+
+&.btn_light-green {
+  border-radius: 5px;
+  height: 60px;
+  width: 271px;
+  font-family: Inter;
+  font-size: 18px;
+  font-weight: 500;
+  background: #9ABC6F;
+  border-color: #9ABC6F;
+  color: $color-white;
+
+  &:focus-visible {
+    outline: 1px solid $color-2FA7BE;
+    outline-offset: 3px;
+  }
+  &:hover {
+    color: $color-white;
+    background-color: $color-37CBD3;
+    border-color: $color-37CBD3;
+    outline: none;
+    box-shadow: none;
+  }
+  &:active {
+    color: $color-2FA7BE;
+    background-color: $color-white;
+    border-color: $color-2FA7BE;
+    outline: none;
+    box-shadow: none;
+  }
+}
+
+
   &.btn_dark {
     width: 271px;
     height: 60px;
@@ -4137,13 +4170,220 @@ a {
     }
 
     .plans {
+      padding: 80px 0;
       grid-row: 11/12;
       background: #F5F5F5;
 
       .plans__container {
+        display: grid;
+        grid-template-columns: 40% 58.5%;
+        grid-template-rows: auto auto 690px;
+        gap: 40px 1.5%;
+
+      }
+      .plans__title {
+        grid-column: 2 span;
+      }
+
+      .plans__filter-list {
+        display: grid;
+        grid-auto-flow: column;
+        justify-content: start;
+        gap: 10px;        
+
+        .plans__filter-item {
+          padding: 16px 22px;          
+          // width: 54px;
+          // height: 54px;          
+          background: #FFFFFF;
+          border: 1px solid #CBCBCB;
+          border-radius: 50px;
+
+
+          &_active {
+            background: #56693E;
+            border-radius: 50px;
+            border: 1px solid #56693E;
+
+          }
+          &_separator {
+            padding: 0;
+            width: 0px;
+            height: 54px;
+            border: 1px solid #CBCBCB;
+
+
+
+          }
+        }
+      }
+
+      .plans__text {
+        align-self: center;
+        max-width: 750px;
+        font-family: Inter;
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 22.4px;
+        text-align: left;
+        color: #616161;
+      }
+
+      .plans__list {
+        background: #FFFFFF;
+        padding: 59px;
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(3, 1fr);
+        gap: 16px;
+        // grid-auto-flow: column dense;
+
+        justify-content: center;
+        justify-items: center;
+        align-items: center;
+        align-content: center;
+
+        .plans__item {
+          width: 100%;
+          height: 100%;
+          display: grid;
+          align-items: center;
+          justify-items: center;
+
+          &_active {
+            border: 2px solid #9ABC6F;
+            border-radius: 5px;
+
+
+          }
+
+          &_1 {
+          }
+          &_2 {
+          }
+          &_3 {
+          }
+          &_4 {
+          }
+          &_5 {
+          }
+          &_6 {
+          }
+          &_7 {
+          }
+          &_8 {
+          }
+        }
+      }
+      .plans__detail {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr 1fr;
+        gap: 20px;
+
+
+        .plans__img {
+          grid-row: 3 span;
+        }
+        .plans__desc {
+          font-family: Inter;
+font-size: 14px;
+font-weight: 400;
+line-height: 16.94px;
+text-align: left;
+color: #616161;
+        }
+        .plans__name {
+          //styleName: н3;
+font-family: Inter;
+font-size: 25px;
+font-weight: 400;
+line-height: 30.26px;
+text-align: left;
+color: #363636;
+
+        }
+        .plans__btn {
+        }
+      }
+    }
+
+    .geo {
+      grid-row: 13/14;
+
+      .geo__container {
+        display: grid;
+        grid-template-columns: 544px 1fr;
+        grid-template-rows:  48px 88px 20px 800px;
+        // grid-auto-flow: row;
+        gap: 20px;
+      }
+
+      .geo__desc {
+        font-family: Inter;
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 22.4px;
+        text-align: left;
+        color: #616161;
+      }
+      .geo__advantages-list {
+        grid-column: 2 / 3;
+        grid-row: 1 / 3;
+        justify-self: end;
+        display: grid;
+        grid-template-columns: repeat(3, minmax(100px, 314px));        
+        gap: 20px;
+
+        .geo__advantages-item {
+          display: grid;
+          grid-template-columns: 5fr 2fr;
+          grid-auto-flow: row;
+          align-items: start;
+          // justify-items: center;
+          justify-content: center;
+          gap: 20px 15px;
+
+          padding: 42px 52px;
+          gap: 20px;          
+          width: 100%;
+          height: 100%;
+          // height: 156px;          
+          border: 1px solid #EDEDED;
+          border-radius: 5px;
+          
+          .geo__advantages-title {
+            font-family: Inter;
+            font-size: 22px;
+            font-weight: 500;
+            line-height: 26.63px;
+            text-align: right;
+            color: #000000;
+            
+          }
+          .geo__advantages-icon {
+          }
+          .geo__advantages-desc {
+            grid-column: 2 span;
+            font-family: Inter;
+            font-size: 18px;
+            font-weight: 400;
+            line-height: 25.2px;
+            text-align: center;
+            color: #616161;            
+          }
+        }
+      }
+      .geo__map {
+        width: 100%;
+        height: 100%;
+        background-color: #004e83;
+        grid-column: 2 span;
+        grid-row: 4 / 5;
 
       }
     }
+
 
 
   }
