исправит ширину куки

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -18,6 +18,11 @@
   border: none;
 }
 
+// поиск блока который ломает верстку:
+// * {
+//   outline : 1px solid red !important;
+// }
+
 *,
 *::before,
 *::after {
@@ -2109,7 +2114,7 @@ a {
     right: 66px;
     top: 50%;
     transform: translateY(-40%);
-    width: 12px;
+    // width: 12px;
     cursor: pointer;
     font-family: "Noto Sans Display";
     font-style: normal;
