--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1443,6 +1443,7 @@ a {
 
 .main {
   padding-top: 80px;
+  overflow: hidden;
   // background-color: #00c27c;
 }
 
@@ -2100,7 +2101,6 @@ a {
   .cookie__btn {
     color: #008ed7;
     cursor: pointer;
-    font-family: "Noto Sans Display";
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
@@ -3498,6 +3498,8 @@ a {
       .footer__desc {
         grid-column: 9/10;
         grid-row: 1/3;
+        opacity: 0.5;
+        color: #fff;
       }
     }
   }
