--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -2611,8 +2611,8 @@ border-radius: 10px;
           grid-template-rows: max-content 1fr;
 
           .form__input_textarea {
-            max-width: 100%;
-            height: 116px;
+            max-width: 395px;
+            min-height: 116px;
           }
 
         }
