добавит фильтрацию планировок

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -4552,6 +4552,7 @@ border-radius: 10px;
         .plans__name {
           justify-self: center;
           align-self: start;
+          width: 100%;
 
           //styleName: н3;
           font-family: Inter;
